Custom--app/main/default/objects/Budget_Line_Item__c/Budget_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This object is part of the Corporate Project Management application.Corporate Projects was built early on as a quick-hit project mgmt tool for a select group of corporate users. We have since explored more robust products and will likely at a future point time.</description>
    <label>Budget Line Item</label>
    <nameField>
        <label>Budget Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>