Custom--app/main/default/objects/Budget_Line_Item__c/fields/Corp_Project__c.field-meta.xml
<CustomField>
    <fullName>Corp_Project__c</fullName>
    <label>Project</label>
    <referenceTo>Corp_Project__c</referenceTo>
    <relationshipLabel>Budget Line Items</relationshipLabel>
    <relationshipName>Budget_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>