Custom--app/main/default/objects/Budget_Line_Item__c/fields/Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date__c</fullName>
    <label>Expense Date</label>
    <type>Date</type>
</CustomField>