Custom--app/main/default/objects/Budget_Line_Item__c/fields/Invoiced_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_to_Date__c</fullName>
    <label>Invoiced to Date</label>
    <summarizedField>Invoice_to_AP__c.Invoice_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_to_AP__c.Budget_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>