Custom--app/main/default/objects/Budget_Line_Item__c/fields/Paid_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_to_Date__c</fullName>
    <label>Paid to Date</label>
    <summarizedField>Invoice_to_AP__c.Invoice_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_to_AP__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_to_AP__c.Budget_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>