Custom--app/main/default/objects/Budget_Line_Item__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget Line Items</relationshipLabel>
    <relationshipName>Budget_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>