Custom--app/main/default/objects/Budget_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Corp_Project__c</columns>
    <columns>NAME</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Budget Line Items</label>
</ListView>